fixes bug 192196 "crashes on shutdown" r=dougt sr=blizzard a=asa